<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/ssz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssz" />

    </LinearLayout>

    <TextView
        android:id="@+id/cikk"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cikk" />

    <TextView
        android:id="@+id/kkod"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kkod" />

    <TextView
        android:id="@+id/db"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db" />

    <TextView
        android:id="@+id/me"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/me" />

    <TextView
        android:id="@+id/kiadhat"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kiadhat" />

    <TextView
        android:id="@+id/rk"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rk" />

    <TextView
        android:id="@+id/hatarido"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hiSn" />

    <TextView
        android:id="@+id/kkodMegoszlas"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kkodMegoszlas" />

    <TextView
        android:id="@+id/megjegyzes"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/megjegyzes" />
</TableRow>