<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/szam"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rendelSzam" />

    <TextView
        android:id="@+id/cikk"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cikk" />

    <TextView
        android:id="@+id/kkod"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kkod" />

    <TextView
        android:id="@+id/hatarido"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hatarido" />

    <TextView
        android:id="@+id/tartozas"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tartozas" />

    <TextView
        android:id="@+id/keszl"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keszlet" />

    <TextView
        android:id="@+id/megjegyzes"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/megjegyzes" />

</TableRow>