<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ugyfelRovidNev"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/ugyfelRovidNev" />

    <TextView
        android:id="@+id/szallitRovidNev"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/szallitRovidNev" />

    <TextView
        android:id="@+id/rendelSzam"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/rendelSzam" />

    <TextView
        android:id="@+id/hatarido"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/hatarido" />

    <TextView
        android:id="@+id/hivatkozas"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/hivatkozas" />

    <TextView
        android:id="@+id/nettoErtek"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/nettoErtek" />

    <TextView
        android:id="@+id/bruttoSuly"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/bruttoSuly" />
    <!-- TODO lassú
    <TextView
        android:id="@+id/teljKkodAzonos"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teljKkodAzonos" />

    <TextView
        android:id="@+id/teljKkodMas"
        style="@style/TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teljKkodMas" /> -->
</TableRow>