<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.bills.BillDetailsFragment">

        <Button
            android:id="@+id/backToMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vissza a menübe" />

        <TextView
            android:id="@+id/szamla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tSzamla" />

        <TextView
            android:id="@+id/szallVevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tSzallVevo" />

        <TextView
            android:id="@+id/szallCim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tSzallCim" />

        <TextView
            android:id="@+id/zeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tZeta" />

        <TextView
            android:id="@+id/szallFizBrNtDn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tSzallFizBrNtDn" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/billDetailsTable"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <include layout="@layout/template_bill_details_table_row" />

            </TableLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/megjegyzesSzamla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/tMegjegyzes" />

    </LinearLayout>
</ScrollView>